--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,14 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<% if @trainer == current_trainer %>
+  <%= button_to "Create Pokemon!", new_pokemon_path, :class => "button medium", :method => :get%>
+<% end %>
+
+<% @trainer_pokemon.each do |pokemon| %>
+	<% if pokemon.ndex %>
+		<p><%= image_tag("pokemon/#{pokemon.ndex}.png", alt: "pokemon") %>
+			<%= button_to "Damage!", damage_path(id: pokemon), :class => "button medium", :method => :patch %>
+    	Name: <%= pokemon.name %>, Level: <%= pokemon.level%>, Health:<%= pokemon.health%></p>
+  	<% end %>
+<% end %>
